# SheyKey_LMS

./: .gitignore  Makefile  README.md  dev.sh
backend/: .env.example  main.py  pyproject.toml
backend/api/: auth.py  calendar.py  clients.py  deals.py  director.py  documents.py  generate.py  import_data.py  manager.py  notifications.py  payments.py  profit.py  sb.py  search.py
backend/core/: access.py  config.py  database.py  dependencies.py  redis_client.py  security.py
backend/migrations/: env.py
backend/models/: __init__.py  audit.py  calendar_task.py  client.py  deal.py  document.py  expense.py  investor.py  manager_cash_entry.py  notification.py  overdue.py  payment.py  payment_commission.py  profit_period.py  push_subscription.py  restructuring.py  sb_work_session.py  settings.py  staff_notification.py  user.py
backend/schemas/: auth.py  client.py  deal.py  director.py  manager.py  notification.py  payment.py  sb.py  search.py  user.py
backend/scripts/: seed.py
backend/services/: audit_service.py  contract_number_service.py  deal_activation_service.py  deal_display.py  deal_portfolio_service.py  debt_collection_stage_service.py  excel_exporter.py  investor_share_service.py  manager_cash_service.py  manager_control_service.py  minio_service.py  murabaha_bot_schedule.py  murabaha_contract_service.py  murabaha_docx_generator.py  murabaha_tariff_service.py  overdue_case_service.py  payment_allocation_service.py  payment_calculator.py  payment_commission_service.py  pdf_generator.py  promise_notification_service.py  push_service.py  sb_metrics_service.py  (+3 more)
(+148 files in other folders)
