[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islamic-finance-lms-backend"
version = "1.0.0"
description = "Islamic Finance LMS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2,<4.0",
    "redis[asyncio]>=5.2.0",
    "celery[redis]>=5.4.0",
    "minio>=7.2.11",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "weasyprint>=65.0",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0",
    "python-docx>=1.1.2",
    "email-validator>=2.2.0",
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "locust>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
